<resources>
    <string name="app_name">USCRecApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="loginInvalidPassword">Invalid password</string>
    <string name="loginInvalidEmail">Invalid Email Address</string>
    <string name="loginIncorrectPassword">Incorrect Email or password</string>
    <string name="loginButtonLogin">Login</string>
    <string name="loginEditTextPassword">Password</string>
    <string name="loginEditTextEmail">Email</string>
    <string name="loginButtonToSignUp">New to Our App?</string>
    <string name="signUpEditTextEmail">Email</string>
    <string name="signUpEditTextNetID">USC ID</string>
    <string name="signUpEditTextUsername">Name</string>
    <string name="signUpEditTextPassword">Password</string>
    <string name="signUpImageViewAvatar">This is your avatar</string>
    <string name="signUpButtonSignUp">Sign Up</string>
...

    <string name="confirmBookingMessage">"Are you sure you want to Book this time?"</string>

    <string name="bookingButtonBook">Book</string>
    <string name="bookingButtonBookAndWaitlisted">Book(Waitlisted)</string>
    <string name="bookingButtonBooked">Booked</string>
    <string name="summaryButtonCancel">Cancel</string>
    <string name="bookingButtonWaitlisted">Waitlisted</string>
    <string name="bookingButtonWaitlist">Waitlist</string>


</resources>
