<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MapsActivity">

    <fragment
        android:id="@+id/mapFragmentMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/mapButtonGoToSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:text="Booking Summary" />

    <Button
        android:id="@+id/mapButtonGoToNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/biege"
        android:text="Notifcation Center" />

    <Button
        android:id="@+id/mapButtonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/dark_red"
        android:text="Log Out" />

    <ImageView
        android:id="@+id/mapImageViewAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="This is your avatar"
        android:maxWidth="75dp"
        android:maxHeight="75dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:scaleType="fitCenter"
        android:src="@drawable/avatar_sample" />

</FrameLayout>

