...
    android:layout_height="wrap_content"
    android:layout_marginStart="55dp"
    android:layout_marginTop="50dp"
    android:weightSum="100">

    <Button
        android:id="@+id/timeSlotAdapterButtonBook"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="66.6"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text=" Book " />

...
